@@ -92,6 +92,9 @@ In order to filter those out, there is now a new flag: NoSlotlessItems
 
 ===New Functions:
 * ShowSkillMenu
+* GetLevelUpMenuUnspentPoints
+* SetLevelUpMenuCanExitEarly
+* SetLevelUpMenuPoints
 
 
 
